fix lock mechanism
